FIX-> BUSINESS DIRECTORY: All - Expand view (List and Add/Edit) UI collapsed.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -782,9 +782,11 @@ button{
         position: relative !important;
         right: 0px !important;
     }
-    .fixedsearch{
-        .text-right{
-            text-align: left !important;
+}
+#pcoded{
+    &[vertical-nav-type="offcanvas"] {
+        .header-title {
+            width: 96%;
         }
     }
 }
